--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-input/mask": "^1.2.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.52.0",
     "react-icons": "^5.2.1",
+    "react-input-mask": "^2.0.4",
     "react-router-dom": "^6.23.1",
     "styled-components": "^6.1.11"
   },
